--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -73,8 +73,8 @@ jobs:
 
       - name: Install xvfb
         run: |
-          apt-get update
-          apt-get install -y xvfb
+          sudo apt-get update
+          sudo apt-get install -y xvfb
 
       - name: Setup Java 21
         uses: actions/setup-java@v4
