--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -91,10 +91,6 @@ jobs:
       - name: Start required containers
         run: sudo docker-compose -f docker-compose.integration.yml up -d
 
-      # List all containers including stopped ones
-      - name: List all containers
-        run: sudo docker ps -a
-
       - name: Wait for services from inside tester container
         run: |
           echo "Waiting for Auth service from inside tester container..."
@@ -129,7 +125,7 @@ jobs:
       - name: Wait for app to be ready
         shell: bash
         run: |
-          for i in {1..30}; do
+          for i in {1..15}; do
             if curl -s http://localhost:8080/actuator/health | grep '"status":"UP"' > /dev/null; then
               echo "App is ready!"
               break
@@ -140,6 +136,7 @@ jobs:
 
           curl -s http://localhost:8080/actuator/health | grep '"status":"UP"' > /dev/null || {
             echo "App failed to start in time"
+            sudo docker ps -a
             exit 1
           }
 
