--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,7 +48,7 @@ jobs:
     name: Validate the kotlin
     uses: ministryofjustice/hmpps-github-actions/.github/workflows/kotlin_validate.yml@v2 # WORKFLOW_VERSION
     secrets: inherit
-  build:
+  docker_build:
     name: Build docker image from hmpps-github-actions
     if: github.ref == 'refs/heads/main'
     uses: ministryofjustice/hmpps-github-actions/.github/workflows/docker_build.yml@v2 # WORKFLOW_VERSION
@@ -61,9 +61,27 @@ jobs:
       push: ${{ inputs.push || true }}
       docker_multiplatform: false
 
+  kotlin_build:
+    name: Build Kotlin JAR
+    runs-on: ubuntu-latest
+    needs: kotlin_validate
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Grant execute permissions
+        run: chmod +x ./gradlew
+
+      - name: Build JAR
+        run: ./gradlew build
+
   integration_playwright_tests:
     needs:
-      - kotlin_validate
+      - kotlin_build
     runs-on: ubuntu-latest
     container:
       image: cimg/openjdk:21.0-browsers
