--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -79,6 +79,9 @@ jobs:
       - name: Build JAR
         run: ./gradlew build
 
+      - name: List built JAR
+        run: ls -lh build/libs/
+
   integration_playwright_tests:
     needs:
       - kotlin_build
