--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -142,7 +142,7 @@ jobs:
       - name: Download app JAR
         uses: actions/download-artifact@v4
         with:
-          name: app-jar
+          name: app.jar
           path: build/libs/
 
       - name: List built JAR
