--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -84,6 +84,12 @@ jobs:
           JAR_FILE=$(ls build/libs/calculate-journey-variable-payments-*.jar | head -n 1)
           mv "$JAR_FILE" build/libs/app.jar
 
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-jar
+          path: build/libs/app.jar
+
   integration_playwright_tests:
     needs:
       - kotlin_build
@@ -142,8 +148,8 @@ jobs:
       - name: Download app JAR
         uses: actions/download-artifact@v4
         with:
-          name: app.jar
-          path: build/libs/
+          name: app-jar
+          path: build/libs
 
       - name: List built JAR
         run: ls -lh build/libs/
