--- a/src/main/resources/application-integration-tests.yml
+++ b/src/main/resources/application-integration-tests.yml
@@ -8,7 +8,7 @@ spring:
     enabled: true
     locations: classpath:/db/migration
 
-APP_DB_URL: "jdbc:postgresql://localhost:5433/jpc?reWriteBatchedInserts=true&user=jpc&password=letmein"
+APP_DB_URL: "jdbc:postgresql://postgres-jpc:5433/jpc?reWriteBatchedInserts=true&user=jpc&password=letmein"
 AWS_DEFAULT_REGION: eu-west-2
 BASM_API_BASE_URL: http://localhost:9999
 BASM_BUCKET_NAME: basm
