--- a/src/main/resources/application-integration-tests.yml
+++ b/src/main/resources/application-integration-tests.yml
@@ -3,10 +3,15 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: validate
+  datasource:
+    url: ${APP_DB_URL}
+    username: jpc
+    password: jpc
 
   flyway:
     enabled: true
     locations: classpath:/db/migration
+
 
 APP_DB_URL: "jdbc:postgresql://postgres-jpc:5433/jpc?reWriteBatchedInserts=true&user=jpc&password=letmein"
 AWS_DEFAULT_REGION: eu-west-2
