MAP-2577 Add service account to deployment

--- a/helm_deploy/calculate-journey-variable-payments/values.yaml
+++ b/helm_deploy/calculate-journey-variable-payments/values.yaml
@@ -3,6 +3,7 @@
 generic-service:
   nameOverride: calculate-journey-variable-payments
   replicaCount: 2
+  serviceAccountName: calculate-journey-variable-payments
 
   image:
     repository: quay.io/hmpps/calculate-journey-variable-payments
