--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -117,6 +117,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install docker-compose-plugin      
 
+      - name: Install PostgreSQL client
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y postgresql-client
+
       - name: Start required containers
         run: sudo docker-compose -f docker-compose.integration.yml up -d
 
