--- a/docker-compose.integration.yml
+++ b/docker-compose.integration.yml
@@ -98,7 +98,7 @@ services:
       - auth
       - external-users-api
   tester:
-    image: curlimages/curl:latest
+    image: bitnami/postgresql-client:15
     depends_on:
       - auth
       - external-users-api
