--- a/docker-compose.integration.yml
+++ b/docker-compose.integration.yml
@@ -98,7 +98,15 @@ services:
       - auth
       - external-users-api
   tester:
-    image: bitnami/postgresql-client:15
+    image: curlimages/curl:latest
+    depends_on:
+      - auth
+      - external-users-api
+    entrypoint: [ "sleep", "infinity" ]
+    networks:
+      - app-net
+  tester-sql:
+    image: postgres:15
     depends_on:
       - auth
       - external-users-api
