MAP-2535 adding extra testing container

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -144,7 +144,7 @@ jobs:
           sudo docker-compose -f docker-compose.integration.yml exec -T tester-sql /bin/sh -c '
             for i in $(seq 1 10); do
               echo "Attempt $i: checking Postgres..."
-              PGPASSWORD=letmein pg_isready -h db -p 5432 -U jpc -d jpc
+              PGPASSWORD=letmein pg_isready -h postgres-jpc -p 5432 -U jpc -d jpc
               if [ $? -eq 0 ]; then
                 echo "✅ Postgres is ready!"
                 exit 0
@@ -155,6 +155,7 @@ jobs:
             echo "❌ Postgres did not become ready."
             exit 1
           '
+          sudo docker-compose -f docker-compose.integration.yml logs postgres-jpc
 
       - name: Download WireMock
         run: curl -o wiremock.jar https://repo1.maven.org/maven2/org/wiremock/wiremock-standalone/3.9.1/wiremock-standalone-3.9.1.jar
