--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -175,14 +175,14 @@ jobs:
 
       - name: Build image from Dockerfile
         run: |
-          docker build -t app_image .
+          sudo docker build -t app_image .
 
       - name: Run App container in same network
         run: |
           NETWORK_NAME=app-net
           echo "Using network: $NETWORK_NAME"
 
-          docker run -d \
+          sudo docker run -d \
             --name my_app \
             --network $NETWORK_NAME \
             -p 8080:8080 \
