--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -175,7 +175,11 @@ jobs:
 
       - name: Build image from Dockerfile
         run: |
-          sudo docker build -t app_image .
+          sudo docker build -t app_image .      
+
+      - name: List docker networks
+        run: |
+          sudo docker network ls
 
       - name: Run App container in same network
         run: |
