MAP-2535 adding extra testing container

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -202,6 +202,7 @@ jobs:
           done
           echo "App failed to start in time"
           sudo docker logs my_app || true
+          sudo docker exec my_app netstat -tlnp
           exit 1
 
       - name: Run Playwright Integration Tests
