--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -106,6 +106,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y xvfb
 
+      - name: Install PostgreSQL client
+        run: |
+          sudo apt-get install -y postgresql-client
+
       - name: Setup Java 21
         uses: actions/setup-java@v4
         with:
@@ -137,24 +141,16 @@ jobs:
             echo "❌ Auth service did not become ready."
             exit 1
           '
-      - name: Wait for Postgres from inside tester container
+      - name: Wait for Postgres on host
         run: |
-          echo "Waiting for Postgres from inside tester container..."
-      
-          sudo docker-compose -f docker-compose.integration.yml exec -T tester-sql /bin/sh -c '
-            for i in $(seq 1 10); do
-              echo "Attempt $i: checking Postgres..."
-              PGPASSWORD=letmein pg_isready -h postgres-jpc -p 5432 -U jpc -d jpc
-              if [ $? -eq 0 ]; then
-                echo "✅ Postgres is ready!"
-                exit 0
-              fi
-              echo "Retry $i: Not ready yet. Sleeping..."
-              sleep 10
-            done
-            echo "❌ Postgres did not become ready."
-            exit 1
-          '
+          echo "Waiting for Postgres on localhost:5433..."
+          for i in $(seq 1 20); do
+            PGPASSWORD=letmein pg_isready -h localhost -p 5433 -U jpc -d jpc && echo "✅ Postgres is ready!" && exit 0
+            echo "Retry $i: Not ready yet. Sleeping..."
+            sleep 5
+          done
+          echo "❌ Postgres did not become ready."
+          exit 1
 
       - name: Download WireMock
         run: curl -o wiremock.jar https://repo1.maven.org/maven2/org/wiremock/wiremock-standalone/3.9.1/wiremock-standalone-3.9.1.jar
