--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -185,28 +185,29 @@ jobs:
             app_image
 
       - name: Wait for app to be healthy (inside tester container)
+        id: wait_health
+        continue-on-error: true
         run: |
           echo "Waiting for app to be healthy from inside tester container..."
-      
           sudo docker-compose -f docker-compose.integration.yml exec -T tester /bin/sh -c '
-            for i in $(seq 1 40); do
+            for i in $(seq 1 20); do
               echo "Attempt $i: Checking app health..."
               response=$(curl -s http://my_app:8080/health || true)
               echo "Response: $response"
-              echo "$response" | grep "\"status\":\"UP\"" > /dev/null
-              if [ $? -eq 0 ]; then
-                echo "✅ App is healthy!"
-                exit 0
-              fi
+              echo "$response" | grep "\"status\":\"UP\"" > /dev/null && exit 0
               echo "Retry $i: App not ready yet. Sleeping..."
               sleep 10
             done
-            echo "❌ App failed to become healthy in time."
-            echo "---- app.log ----"
-            sudo docker logs my_app || true
-            echo "-----------------"
             exit 1
           '
+
+      - name: Print app logs on failure
+        if: steps.wait_health.outcome == 'failure'
+        run: |
+          echo "❌ App failed to become healthy in time."
+          echo "---- app.log ----"
+          sudo docker logs my_app || true
+          echo "-----------------"
 
       - name: Run Playwright Integration Tests
         run: |
