--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -193,7 +193,7 @@ jobs:
           sudo docker-compose -f docker-compose.integration.yml exec -T tester /bin/sh -c '
             for i in $(seq 1 20); do
               echo "Attempt $i: Checking app health..."
-              response=$(curl -s http://my_app:8080/health || true)
+              response=$(curl -s -H "Host: localhost" http://my_app:8080/health || true)
               echo "Response: $response"
               echo "$response" | grep "\"status\":\"UP\"" > /dev/null && exit 0
               echo "Retry $i: App not ready yet. Sleeping..."
