--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -224,20 +224,28 @@ jobs:
           NETWORK_NAME=$(sudo docker network ls --format '{{.Name}}' | grep 'app-net$')
           echo "Running Playwright tests in network: $NETWORK_NAME"
           
+          # Ensure Gradle wrapper is executable
+          chmod +x ./gradlew
+          
           sudo docker run --rm \
             --network $NETWORK_NAME \
             -v $PWD:/app \
             -v ~/.gradle:/root/.gradle \
             -w /app \
             mcr.microsoft.com/playwright:v1.47.2-jammy \
-            bash -c "
-              set -e
-              echo 'Installing Playwright dependencies...'
-              npx playwright install --with-deps
-              echo 'Running Gradle Playwright tests...'
-              xvfb-run --auto-servernum --server-args='-screen 0 1024x768x24' \
-                ./gradlew --no-daemon --info testPlaywrightIntegration -Dplaywright.headless=true -Dplaywright.args='--no-sandbox --disable-dev-shm-usage'
-            "
+              bash -c "
+                set -e
+                echo '🔍 Listing /app contents:'
+                ls -l /app
+                echo ''
+                echo 'Installing Playwright dependencies...'
+                npx playwright install --with-deps
+                echo 'Running Gradle Playwright tests...'
+                xvfb-run --auto-servernum --server-args='-screen 0 1024x768x24' \
+                ./gradlew --no-daemon --info testPlaywrightIntegration \
+                -Dplaywright.headless=true \
+                -Dplaywright.args='--no-sandbox --disable-dev-shm-usage'
+              "
   
 
   deploy_dev:
