--- a/src/main/resources/application-integration-tests.yml
+++ b/src/main/resources/application-integration-tests.yml
@@ -24,6 +24,8 @@ logging:
     org.apache.catalina.core.ContainerBase.[Tomcat].[localhost].[/]: INFO
 
 server:
+  forward-headers-strategy: none
+  allowed-hosts: "localhost,my_app"
   tomcat:
     accesslog:
       enabled: true
