--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -248,8 +248,10 @@ jobs:
             
             echo 'Testing network connectivity...'
             ping -c 2 my_app || echo '⚠️ Ping failed'
-            curl -v http://my_app:8080/health || echo '⚠️ Curl failed'
             
+            echo 'Checking app health with header Host: localhost...'
+            curl -v -H 'Host: localhost' http://my_app:8080/health || echo '⚠️ Curl failed'
+          
             echo 'Installing Playwright dependencies...'
             npx playwright install --with-deps
             
