--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -190,7 +190,7 @@ jobs:
         continue-on-error: true
         run: |
           echo "Waiting for app to be healthy from inside tester container..."
-          sudo docker-compose -f docker-compose.integration.yml exec -T tester /bin/sh -c '
+          sudo docker-compose -f docker-compose.integration.yml exec -T auth /bin/sh -c '
             for i in $(seq 1 20); do
               echo "Attempt $i: Checking app health..."
               response=$(curl -s -H "Host: localhost" http://my_app:8080/health || true)
