--- a/src/main/resources/application-integration-tests.yml
+++ b/src/main/resources/application-integration-tests.yml
@@ -47,7 +47,7 @@ HMPPS_AUTH_BASE_URI: http://auth:9090
 HMPPS_MANAGE_USERS_BASE_URI: http://manage-users-api:9091
 HMPPS_AUTH_CLIENT_ID: pecs-jpc-client
 HMPPS_AUTH_CLIENT_SECRET: clientsecret
-HMPPS_AUTH_REDIRECT_BASE_URI: http://my_app:8080
+HMPPS_AUTH_REDIRECT_BASE_URI: http://my-app:8080
 IMPORT_FILES_LOCATIONS: schedule_34_locations_sample.xlsx
 IMPORT_FILES_PRICES_GEO: geoamey_sample.xlsx
 IMPORT_FILES_PRICES_SERCO: serco_sample.xlsx
